--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=enset-demo-spring-angular2
 spring.datasource.url=jdbc:h2:mem:students-db
 spring.h2.console.enabled=true
 server.port=8021
+spring.mvc.format.date=d/M/yyyy
